Testing adding a new feed entry

--- a/content/Concepts/index.html
+++ b/content/Concepts/index.html
@@ -75,6 +75,8 @@
     <li class="">
     <a href="../../news/testing2.md.html">news/testing2.md</a></li>
     <li class="">
+    <a href="../../news/testing3.md.html">news/testing3.md</a></li>
+    <li class="">
     <a href="../../news/index.html">news/</a></li>
 </ul></nav>
 
