--- a/docs.md.html
+++ b/docs.md.html
@@ -107,6 +107,8 @@ into that system. This item should link straight to a proposal document.</li>
     <li class="">
     <a href="news/testing2.md.html">news/testing2.md</a></li>
     <li class="">
+    <a href="news/testing3.md.html">news/testing3.md</a></li>
+    <li class="">
     <a href="news/index.html">news/</a></li>
 </ul></nav>
 
