--- a/help.md.html
+++ b/help.md.html
@@ -95,6 +95,8 @@ Where can we collect questions that are frequently ask?</p>
     <li class="">
     <a href="news/testing2.md.html">news/testing2.md</a></li>
     <li class="">
+    <a href="news/testing3.md.html">news/testing3.md</a></li>
+    <li class="">
     <a href="news/index.html">news/</a></li>
 </ul></nav>
 
