Updated the atem-entry url to not be relative to xml:base, but globally absolute.

--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
     <li class="">
     <a href="news/testing3.md.html">news/testing3.md</a></li>
     <li class="">
+    <a href="news/testing4.md.html">news/testing4.md</a></li>
+    <li class="">
     <a href="news/index.html">news/</a></li>
 </ul></nav>
 
