Update to a current devel state, to not look so harsh anymore.

--- a/content/Proposals/api-docs-generator.md.html
+++ b/content/Proposals/api-docs-generator.md.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>api-documentation-generator.md | Proposals | Atem Tooling Expressive Models</title>
+    <title>api-docs-generator.md | Proposals | Atem Tooling Expressive Models</title>
     
 
 <link rel="stylesheet" type="text/css"
@@ -14,9 +14,29 @@
   
 
 
-
-<header>
-    <h1><img class="logo" alt="Atem Tooling Expressive Models" src="../../files/Atem-Logo.svg" /></h1>
+<header class="page">
+        <a title="Atem-Project on GitHub"
+           class="connect github" target="_blank"
+           href="https://github.com/graphicore/Atem-Project"
+           >Atem-Project on GitHub</a>
+        <a title="@AtemProject on Twitter"
+           class="connect twitter"
+           target="_blank"
+           href="https://twitter.com/AtemProject"
+           >@AtemProject on Twitter</a>
+        <a title="Subscribe to the News Feed"
+           class="connect feed"
+           href="../../news/feed.atom"
+           >Subscribe to the  News Feed</a>
+        <a title="Metapolator on Google+"
+           class="connect gplus"
+           target="_blank"
+           href="https://plus.google.com/u/0/communities/110027004108709154749"
+           >Metapolator on Google+</a>
+    <h1><img style="width:220px;height:220px"
+             class="logo"
+             alt="Atem Tooling Expressive Models"
+             src="../../files/Atem-Logo.svg" /></h1>
     <nav class="main-menu">
         <ul class="top-level"><!--
         --><li class="">
@@ -32,7 +52,7 @@
         --><li class="">
         <a href="../Manuals/index.html">Manuals</a></li><!--
         --><li class="active">
-        <a href="api-documentation-generator.md.html">API</a></li><!----></ul></li><!----><!--
+        <a href="api-docs-generator.md.html">API</a></li><!----></ul></li><!----><!--
         --><li class="">
             <a href="../../help.md.html">Help</a>
             </li><!----><!----></ul>
@@ -40,7 +60,18 @@
 </header>
 
   
-<article><h1>API Documentation Generator</h1>
+<nav class="sub">
+   <h3>All Proposals</h3>
+   <ul>
+
+    <li class="active">
+    <a href="api-docs-generator.md.html">./api-docs-generator.md</a></li>
+    <li class="">
+    <a href="website-generator.md.html">./website-generator.md</a></li>
+</ul>
+</nav><!--
+--><article class="docs">
+<h1>API Documentation Generator</h1>
 
 <p><strong>This is a stub!</strong></p>
 
@@ -56,15 +87,15 @@ and travis on update or on new tag releases.</p>
 <p>Generating the docs has higher priority than automatic updating, in fact, the latter could be impractical.</p>
 
 <p>Maybe we can do or reuse something in the spirit of literate programming.</p>
+
 </article>
 
-  <nav><ul>
-<!-- This is an initial poor-mans sitemap -->
+  
+<footer class="page"><a href="../../sitemap.html">Sitemap</a>
+    
+    <a href="../../impressum.md.html">Impressum</a>
+    © <a href="https://github.com/graphicore/Atem-Project">The Atem-Project Authors</a>
+</footer>
 
-    <li class="active">
-    <a href="api-documentation-generator.md.html">content/Proposals/api-documentation-generator.md</a></li>
-    <li class="">
-    <a href="website-generator.md.html">content/Proposals/website-generator.md</a></li>
-</ul></nav>
 </body>
 </html>
