--- a/impressum.md.html
+++ b/impressum.md.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>README.md | Proposals | Atem Tooling Expressive Models</title>
+    <title>impressum.md | Atem Tooling Expressive Models</title>
     
 
 <link rel="stylesheet" type="text/css"
-      href="../../files/main.css" />
+      href="files/main.css" />
 
 
 </head>
@@ -26,7 +26,7 @@
            >@AtemProject on Twitter</a>
         <a title="Subscribe to the News Feed"
            class="connect feed"
-           href="../../news/feed.atom"
+           href="news/feed.atom"
            >Subscribe to the  News Feed</a>
         <a title="Metapolator on Google+"
            class="connect gplus"
@@ -36,54 +36,39 @@
     <h1><img style="width:220px;height:220px"
              class="logo"
              alt="Atem Tooling Expressive Models"
-             src="../../files/Atem-Logo.svg" /></h1>
+             src="files/Atem-Logo.svg" /></h1>
     <nav class="main-menu">
         <ul class="top-level"><!--
         --><li class="">
-            <a href="../../index.html">Atem Project</a>
-            </li><!----><!--
-        --><li class="">
-            <a href="../../docs.md.html">Documentation</a>
+            <a href="index.html">Atem Project</a>
             </li><!----><li class="sub-level"><ul><!--
         --><li class="">
-        <a href="../Concepts/index.html">Concepts</a></li><!--
-        --><li class="active">
-        <a href="index.html">Proposals</a></li><!--
+        <a href="news/index.html">News</a></li><!--
         --><li class="">
-        <a href="../Manuals/index.html">Manuals</a></li><!--
+        <a href="vision.md.html">Vision</a></li><!--
         --><li class="">
-        <a href="api-docs-generator.md.html">API</a></li><!----></ul></li><!----><!--
+        <a href="contribute.md.html">Contribute</a></li><!----></ul></li><!----><!--
         --><li class="">
-            <a href="../../help.md.html">Help</a>
+            <a href="docs.md.html">Documentation</a>
+            </li><!----><!--
+        --><li class="">
+            <a href="help.md.html">Help</a>
             </li><!----><!----></ul>
     </nav>
 </header>
 
   
-<nav class="sub">
-   <h3>All Proposals</h3>
-   <ul>
+<article class="standard"><h1>Impressum</h1>
 
-    <li class="">
-    <a href="api-docs-generator.md.html">./api-docs-generator.md</a></li>
-    <li class="">
-    <a href="website-generator.md.html">./website-generator.md</a></li>
-</ul>
-</nav><!--
---><article class="docs">
-<h1>Proposals</h1>
-
-<p><em>TODO: flesh out</em></p>
-
-<p>Proposals help us planning enhancements or new Atem tools and later
-serve as an initial documentation.</p>
-
+<p>Please use the contact data provided at the profile page of
+<a href="http://graphicore.de/en/page/lasse">Lasse Fister</a> (external link)
+if there are any problems. Lasse is in charge of the contents of this site.</p>
 </article>
 
   
-<footer class="page"><a href="../../sitemap.html">Sitemap</a>
+<footer class="page"><a href="sitemap.html">Sitemap</a>
     
-    <a href="../../impressum.md.html">Impressum</a>
+    <a href="impressum.md.html">Impressum</a>
     © <a href="https://github.com/graphicore/Atem-Project">The Atem-Project Authors</a>
 </footer>
 
