--- a/vision.md.html
+++ b/vision.md.html
@@ -14,9 +14,29 @@
   
 
 
-
-<header>
-    <h1><img class="logo" alt="Atem Tooling Expressive Models" src="files/Atem-Logo.svg" /></h1>
+<header class="page">
+        <a title="Atem-Project on GitHub"
+           class="connect github" target="_blank"
+           href="https://github.com/graphicore/Atem-Project"
+           >Atem-Project on GitHub</a>
+        <a title="@AtemProject on Twitter"
+           class="connect twitter"
+           target="_blank"
+           href="https://twitter.com/AtemProject"
+           >@AtemProject on Twitter</a>
+        <a title="Subscribe to the News Feed"
+           class="connect feed"
+           href="news/feed.atom"
+           >Subscribe to the  News Feed</a>
+        <a title="Metapolator on Google+"
+           class="connect gplus"
+           target="_blank"
+           href="https://plus.google.com/u/0/communities/110027004108709154749"
+           >Metapolator on Google+</a>
+    <h1><img style="width:220px;height:220px"
+             class="logo"
+             alt="Atem Tooling Expressive Models"
+             src="files/Atem-Logo.svg" /></h1>
     <nav class="main-menu">
         <ul class="top-level"><!--
         --><li class="">
@@ -38,47 +58,17 @@
 </header>
 
   
-<article><h1>Vision</h1>
+<article class="standard"><h1>Vision</h1>
 
 <p><em>This is a stub</em></p>
 </article>
 
   
-<h3>sitemap</h3>
-<nav><ul>
-<!-- This is an initial poor-mans sitemap -->
-
-    <li class="">
-    <a href="docs.md.html">Documentation</a></li>
-    <li class="">
-    <a href="help.md.html">Help</a></li>
-    <li class="">
-    <a href="contribute.md.html">__root__/contribute.md</a></li>
-    <li class="active">
-    <a href="vision.md.html">__root__/vision.md</a></li>
-    <li class="">
-    <a href="index.html">Atem Project</a></li>
-    <li class="">
-    <a href="content/Concepts/index.html">Concepts</a></li>
-    <li class="">
-    <a href="content/Manuals/index.html">Manuals</a></li>
-    <li class="">
-    <a href="content/Proposals/api-documentation-generator.md.html">content/Proposals/api-documentation-generator.md</a></li>
-    <li class="">
-    <a href="content/Proposals/website-generator.md.html">content/Proposals/website-generator.md</a></li>
-    <li class="">
-    <a href="content/Proposals/index.html">Proposals</a></li>
-    <li class="">
-    <a href="news/testing1.md.html">news/testing1.md</a></li>
-    <li class="">
-    <a href="news/testing2.md.html">news/testing2.md</a></li>
-    <li class="">
-    <a href="news/testing3.md.html">news/testing3.md</a></li>
-    <li class="">
-    <a href="news/testing4.md.html">news/testing4.md</a></li>
-    <li class="">
-    <a href="news/index.html">news/</a></li>
-</ul></nav>
+<footer class="page"><a href="sitemap.html">Sitemap</a>
+    
+    <a href="impressum.md.html">Impressum</a>
+    © <a href="https://github.com/graphicore/Atem-Project">The Atem-Project Authors</a>
+</footer>
 
 </body>
 </html>
