--- a/help.md.html
+++ b/help.md.html
@@ -14,31 +14,47 @@
   
 
 
-
-<header>
-    <h1><img class="logo" alt="Atem Tooling Expressive Models" src="files/Atem-Logo.svg" /></h1>
+<header class="page">
+        <a title="Atem-Project on GitHub"
+           class="connect github" target="_blank"
+           href="https://github.com/graphicore/Atem-Project"
+           >Atem-Project on GitHub</a>
+        <a title="@AtemProject on Twitter"
+           class="connect twitter"
+           target="_blank"
+           href="https://twitter.com/AtemProject"
+           >@AtemProject on Twitter</a>
+        <a title="Subscribe to the News Feed"
+           class="connect feed"
+           href="news/feed.atom"
+           >Subscribe to the  News Feed</a>
+        <a title="Metapolator on Google+"
+           class="connect gplus"
+           target="_blank"
+           href="https://plus.google.com/u/0/communities/110027004108709154749"
+           >Metapolator on Google+</a>
+    <h1><img style="width:220px;height:220px"
+             class="logo"
+             alt="Atem Tooling Expressive Models"
+             src="files/Atem-Logo.svg" /></h1>
     <nav class="main-menu">
         <ul class="top-level"><!--
         --><li class="">
             <a href="index.html">Atem Project</a>
-            </li><!----><li class="sub-level"><ul><!--
-        --><li class="">
-        <a href="news/index.html">News</a></li><!--
-        --><li class="">
-        <a href="vision.md.html">Vision</a></li><!--
-        --><li class="">
-        <a href="contribute.md.html">Contribute</a></li><!----></ul></li><!----><!--
+            </li><!----><!--
         --><li class="">
             <a href="docs.md.html">Documentation</a>
             </li><!----><!--
         --><li class="active">
             <a href="help.md.html">Help</a>
-            </li><!----><!----></ul>
+            </li><!----><li class="sub-level"><ul><!--
+        --><li class="">
+        <a href="sitemap.html">Sitemap</a></li><!----></ul></li><!----><!----></ul>
     </nav>
 </header>
 
   
-<article><h1>Help</h1>
+<article class="standard"><h1>Help</h1>
 
 <p><em>this is a stub</em></p>
 
@@ -54,6 +70,7 @@ at GitHub.</p>
 
 <ul>
 <li>The GitHub <a href="https://github.com/graphicore/Atem-Project/issues">issue tracker</a></li>
+<li>Ask <a href="https://twitter.com/AtemProject">@AtemProject</a> on Twitter</li>
 <li>Post a qestion in <a href="https://plus.google.com/u/0/communities/110027004108709154749">Metapolator on G+</a></li>
 <li>Should we use <a href="irc://irc.freenode.net/atem">freenode #atem</a>?</li>
 <li>We could maybe use a <a href="https://disqus.com/">https://disqus.com/</a> forum on this page, but I&#39;d prefer a solution with less lock-in of our data. Hosted by someone else is fine though.</li>
@@ -66,41 +83,11 @@ Where can we collect questions that are frequently ask?</p>
 </article>
 
   
-<h3>sitemap</h3>
-<nav><ul>
-<!-- This is an initial poor-mans sitemap -->
-
-    <li class="">
-    <a href="docs.md.html">Documentation</a></li>
-    <li class="active">
-    <a href="help.md.html">Help</a></li>
-    <li class="">
-    <a href="contribute.md.html">__root__/contribute.md</a></li>
-    <li class="">
-    <a href="vision.md.html">__root__/vision.md</a></li>
-    <li class="">
-    <a href="index.html">Atem Project</a></li>
-    <li class="">
-    <a href="content/Concepts/index.html">Concepts</a></li>
-    <li class="">
-    <a href="content/Manuals/index.html">Manuals</a></li>
-    <li class="">
-    <a href="content/Proposals/api-documentation-generator.md.html">content/Proposals/api-documentation-generator.md</a></li>
-    <li class="">
-    <a href="content/Proposals/website-generator.md.html">content/Proposals/website-generator.md</a></li>
-    <li class="">
-    <a href="content/Proposals/index.html">Proposals</a></li>
-    <li class="">
-    <a href="news/testing1.md.html">news/testing1.md</a></li>
-    <li class="">
-    <a href="news/testing2.md.html">news/testing2.md</a></li>
-    <li class="">
-    <a href="news/testing3.md.html">news/testing3.md</a></li>
-    <li class="">
-    <a href="news/testing4.md.html">news/testing4.md</a></li>
-    <li class="">
-    <a href="news/index.html">news/</a></li>
-</ul></nav>
+<footer class="page"><a href="sitemap.html">Sitemap</a>
+    
+    <a href="impressum.md.html">Impressum</a>
+    © <a href="https://github.com/graphicore/Atem-Project">The Atem-Project Authors</a>
+</footer>
 
 </body>
 </html>
