--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>index | Atem Tooling Expressive Models</title>
+    <title>index.md | Atem Tooling Expressive Models</title>
     
 
 <link rel="stylesheet" type="text/css"
@@ -14,9 +14,29 @@
   
 
 
-
-<header>
-    <h1><img class="logo" alt="Atem Tooling Expressive Models" src="files/Atem-Logo.svg" /></h1>
+<header class="page">
+        <a title="Atem-Project on GitHub"
+           class="connect github" target="_blank"
+           href="https://github.com/graphicore/Atem-Project"
+           >Atem-Project on GitHub</a>
+        <a title="@AtemProject on Twitter"
+           class="connect twitter"
+           target="_blank"
+           href="https://twitter.com/AtemProject"
+           >@AtemProject on Twitter</a>
+        <a title="Subscribe to the News Feed"
+           class="connect feed"
+           href="news/feed.atom"
+           >Subscribe to the  News Feed</a>
+        <a title="Metapolator on Google+"
+           class="connect gplus"
+           target="_blank"
+           href="https://plus.google.com/u/0/communities/110027004108709154749"
+           >Metapolator on Google+</a>
+    <h1><img style="width:220px;height:220px"
+             class="logo"
+             alt="Atem Tooling Expressive Models"
+             src="files/Atem-Logo.svg" /></h1>
     <nav class="main-menu">
         <ul class="top-level"><!--
         --><li class="active">
@@ -38,15 +58,15 @@
 </header>
 
   
-<article><h1>Atem-Project</h1>
+<article class="standard"><h1><em>UNDER CONSTRUCTION</em> Atem-Project <em>UNDER CONSTRUCTION</em></h1>
 
-<p><strong>A</strong>tem—<strong>T</strong>ooling <strong>E</strong>xpressive <strong>M</strong>odels: This is the central hub of the project and <a href="./tree/gh-pages">host</a> of its website. We will guide the project (documentation, discussions, community, roadmaps etc.) from here.</p>
+<p><strong>A</strong>tem <strong>T</strong>ooling <strong>E</strong>xpressive <strong>M</strong>odels:  We will guide the project (documentation, discussions, community, roadmaps etc.) from here.</p>
 
 <p>Use the issue-tracker of this Github repository to discuss any questions/topics about Atem.</p>
 
 <h2>Contribute?</h2>
 
-<p>A beginning of project management is in <a href="./tasks.md">tasks.md</a>. If you see yourself fit to work on one of the tasks, please contact us!</p>
+<p>A beginning of project management is in <a href="https://github.com/graphicore/Atem-Project/tree/master/tasks.md">tasks.md</a>. If you see yourself fit to work on one of the tasks, please contact us!</p>
 
 <h2>The Atem-Project is a collection of sub-projects:</h2>
 
@@ -91,41 +111,11 @@
 </article>
 
   
-<h3>sitemap</h3>
-<nav><ul>
-<!-- This is an initial poor-mans sitemap -->
-
-    <li class="">
-    <a href="docs.md.html">Documentation</a></li>
-    <li class="">
-    <a href="help.md.html">Help</a></li>
-    <li class="">
-    <a href="contribute.md.html">__root__/contribute.md</a></li>
-    <li class="">
-    <a href="vision.md.html">__root__/vision.md</a></li>
-    <li class="active">
-    <a href="index.html">Atem Project</a></li>
-    <li class="">
-    <a href="content/Concepts/index.html">Concepts</a></li>
-    <li class="">
-    <a href="content/Manuals/index.html">Manuals</a></li>
-    <li class="">
-    <a href="content/Proposals/api-documentation-generator.md.html">content/Proposals/api-documentation-generator.md</a></li>
-    <li class="">
-    <a href="content/Proposals/website-generator.md.html">content/Proposals/website-generator.md</a></li>
-    <li class="">
-    <a href="content/Proposals/index.html">Proposals</a></li>
-    <li class="">
-    <a href="news/testing1.md.html">news/testing1.md</a></li>
-    <li class="">
-    <a href="news/testing2.md.html">news/testing2.md</a></li>
-    <li class="">
-    <a href="news/testing3.md.html">news/testing3.md</a></li>
-    <li class="">
-    <a href="news/testing4.md.html">news/testing4.md</a></li>
-    <li class="">
-    <a href="news/index.html">news/</a></li>
-</ul></nav>
+<footer class="page"><a href="sitemap.html">Sitemap</a>
+    
+    <a href="impressum.md.html">Impressum</a>
+    © <a href="https://github.com/graphicore/Atem-Project">The Atem-Project Authors</a>
+</footer>
 
 </body>
 </html>
