update current devel status

--- a/content/Concepts/index.html
+++ b/content/Concepts/index.html
@@ -10,7 +10,7 @@
 
 
 </head>
-<body>
+<body class="docs">
   
 
 
@@ -33,17 +33,17 @@
            target="_blank"
            href="https://plus.google.com/u/0/communities/110027004108709154749"
            >Metapolator on Google+</a>
-    <h1><img style="width:220px;height:220px"
+    <h1><a href="../../index.html"><img style="width:220px;height:220px"
              class="logo"
              alt="Atem Tooling Expressive Models"
-             src="../../files/Atem-Logo.svg" /></h1>
+             src="../../files/Atem-Logo.svg" /></a></h1>
     <nav class="main-menu">
         <ul class="top-level"><!--
         --><li class="">
-            <a href="../../index.html">Atem Project</a>
+            <a href="../../index.html">Atem</a>
             </li><!----><!--
         --><li class="">
-            <a href="../../docs.md.html">Documentation</a>
+            <a href="../Documentation/index.html">Project</a>
             </li><!----><li class="sub-level"><ul><!--
         --><li class="active">
         <a href="index.html">Concepts</a></li><!--
