--- a/content/Documentation/index.html
+++ b/content/Documentation/index.html
@@ -2,15 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>docs.md | Atem Tooling Expressive Models</title>
+    <title>README.md | Documentaion | Atem Tooling Expressive Models</title>
     
 
 <link rel="stylesheet" type="text/css"
-      href="files/main.css" />
+      href="../../files/main.css" />
 
 
 </head>
-<body>
+<body class="docs">
   
 
 
@@ -26,41 +26,50 @@
            >@AtemProject on Twitter</a>
         <a title="Subscribe to the News Feed"
            class="connect feed"
-           href="news/feed.atom"
+           href="../../news/feed.atom"
            >Subscribe to the  News Feed</a>
         <a title="Metapolator on Google+"
            class="connect gplus"
            target="_blank"
            href="https://plus.google.com/u/0/communities/110027004108709154749"
            >Metapolator on Google+</a>
-    <h1><img style="width:220px;height:220px"
+    <h1><a href="../../index.html"><img style="width:220px;height:220px"
              class="logo"
              alt="Atem Tooling Expressive Models"
-             src="files/Atem-Logo.svg" /></h1>
+             src="../../files/Atem-Logo.svg" /></a></h1>
     <nav class="main-menu">
         <ul class="top-level"><!--
         --><li class="">
-            <a href="index.html">Atem Project</a>
+            <a href="../../index.html">Atem</a>
             </li><!----><!--
         --><li class="active">
-            <a href="docs.md.html">Documentation</a>
+            <a href="index.html">Project</a>
             </li><!----><li class="sub-level"><ul><!--
         --><li class="">
-        <a href="content/Concepts/index.html">Concepts</a></li><!--
+        <a href="../Concepts/index.html">Concepts</a></li><!--
         --><li class="">
-        <a href="content/Proposals/index.html">Proposals</a></li><!--
+        <a href="../Proposals/index.html">Proposals</a></li><!--
         --><li class="">
-        <a href="content/Manuals/index.html">Manuals</a></li><!--
+        <a href="../Manuals/index.html">Manuals</a></li><!--
         --><li class="">
-        <a href="content/Proposals/api-docs-generator.md.html">API</a></li><!----></ul></li><!----><!--
+        <a href="../Proposals/api-docs-generator.md.html">API</a></li><!----></ul></li><!----><!--
         --><li class="">
-            <a href="help.md.html">Help</a>
+            <a href="../../help.md.html">Help</a>
             </li><!----><!----></ul>
     </nav>
 </header>
 
   
-<article class="standard"><h1>Documenting Expressive Models</h1>
+<nav class="sub">
+   <h3>All Documentaion</h3>
+   <ul>
+
+    <li class="">
+    <a href="Testing.md.html">./Testing.md</a></li>
+</ul>
+</nav><!--
+--><article class="docs">
+<h1>Documenting Expressive Models</h1>
 
 <p>Documentation on several levels is the single most important communication
 channel.</p>
@@ -77,7 +86,7 @@ the need of documentation versus the inability to provide up-to date adequate do
 in a rapidly changing project.</p>
 
 <ul>
-<li><strong><a href="content/Concepts/index.html">Concepts</a></strong> contains a high level documentation to give an overview about architecture,
+<li><strong><a href="../Concepts/index.html">Concepts</a></strong> contains a high level documentation to give an overview about architecture,
 design ideas etc. that is actually used in the project. This is meant to help understanding
 when diving into the code. Since this is very high level the documentation in here won&#39;t change
 so fast and it is more save to put time into writing it.</li>
@@ -95,12 +104,13 @@ awareness for our need of an <em>automated system</em> to generate well structur
 from our source code, where then as well the source codes will have to be changed to feed
 into that system. This item should link straight to a proposal document.</li>
 </ul>
+
 </article>
 
   
-<footer class="page"><a href="sitemap.html">Sitemap</a>
+<footer class="page"><a href="../../sitemap.html">Sitemap</a>
     
-    <a href="impressum.md.html">Impressum</a>
+    <a href="../../impressum.md.html">Impressum</a>
     © <a href="https://github.com/graphicore/Atem-Project">The Atem-Project Authors</a>
 </footer>
 
