--- a/content/Documentation/Testing.md.html
+++ b/content/Documentation/Testing.md.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Testing.md |  | Atem Tooling Expressive Models</title>
+    <title>Testing.md | Documentaion | Atem Tooling Expressive Models</title>
     
 
 <link rel="stylesheet" type="text/css"
@@ -10,7 +10,7 @@
 
 
 </head>
-<body>
+<body class="docs">
   
 
 
@@ -33,17 +33,17 @@
            target="_blank"
            href="https://plus.google.com/u/0/communities/110027004108709154749"
            >Metapolator on Google+</a>
-    <h1><img style="width:220px;height:220px"
+    <h1><a href="../../index.html"><img style="width:220px;height:220px"
              class="logo"
              alt="Atem Tooling Expressive Models"
-             src="../../files/Atem-Logo.svg" /></h1>
+             src="../../files/Atem-Logo.svg" /></a></h1>
     <nav class="main-menu">
         <ul class="top-level"><!--
         --><li class="">
-            <a href="../../index.html">Atem Project</a>
+            <a href="../../index.html">Atem</a>
             </li><!----><!--
         --><li class="">
-            <a href="../../docs.md.html">Documentation</a>
+            <a href="index.html">Project</a>
             </li><!----><li class="sub-level"><ul><!--
         --><li class="">
         <a href="../Concepts/index.html">Concepts</a></li><!--
@@ -61,7 +61,7 @@
 
   
 <nav class="sub">
-   <h3>All content/Docs</h3>
+   <h3>All Documentaion</h3>
    <ul>
 
     <li class="active">
