--- a/impressum.md.html
+++ b/impressum.md.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>impressum.md | Atem Tooling Expressive Models</title>
+    <title>impressum.md | Atem | Atem Tooling Expressive Models</title>
     
 
 <link rel="stylesheet" type="text/css"
@@ -10,7 +10,7 @@
 
 
 </head>
-<body>
+<body class="">
   
 
 
@@ -33,14 +33,14 @@
            target="_blank"
            href="https://plus.google.com/u/0/communities/110027004108709154749"
            >Metapolator on Google+</a>
-    <h1><img style="width:220px;height:220px"
+    <h1><a href="index.html"><img style="width:220px;height:220px"
              class="logo"
              alt="Atem Tooling Expressive Models"
-             src="files/Atem-Logo.svg" /></h1>
+             src="files/Atem-Logo.svg" /></a></h1>
     <nav class="main-menu">
         <ul class="top-level"><!--
         --><li class="">
-            <a href="index.html">Atem Project</a>
+            <a href="index.html">Atem</a>
             </li><!----><li class="sub-level"><ul><!--
         --><li class="">
         <a href="news/index.html">News</a></li><!--
@@ -49,7 +49,7 @@
         --><li class="">
         <a href="contribute.md.html">Contribute</a></li><!----></ul></li><!----><!--
         --><li class="">
-            <a href="docs.md.html">Documentation</a>
+            <a href="content/Documentation/index.html">Project</a>
             </li><!----><!--
         --><li class="">
             <a href="help.md.html">Help</a>
