Push version for review

--- a/help.md.html
+++ b/help.md.html
@@ -5,6 +5,9 @@
     <title>help.md | Atem | Atem Tooling Expressive Models</title>
     
 
+<link rel="alternate" type="application/atom+xml"
+      title="Atem-Project News Feed" href="news/feed.atom" />
+
 <link rel="stylesheet" type="text/css"
       href="files/main.css" />
 
@@ -43,7 +46,7 @@
             <a href="index.html">Atem</a>
             </li><!----><!--
         --><li class="">
-            <a href="content/Documentation/index.html">Project</a>
+            <a href="content/Sub-Projects/index.html">Project</a>
             </li><!----><!--
         --><li class="active">
             <a href="help.md.html">Help</a>
@@ -56,12 +59,9 @@
   
 <article class="standard"><h1>Help</h1>
 
-<p><em>this is a stub</em></p>
+<p>To build this help section we need to know what kind of help is actually needed.</p>
 
-<p>To not build this help section without knowing what kind of help is actually needed,
-we&#39;d like you to ask you kindly to help us in helping you.</p>
-
-<h2>What kind of help do you need?</h2>
+<h2>What kind of help do you actually need?</h2>
 
 <p>Please contact us. The best way is to file an issue in our <a href="https://github.com/graphicore/Atem-Project/issues">issue tracker</a>
 at GitHub.</p>
@@ -72,14 +72,21 @@ at GitHub.</p>
 <li>The GitHub <a href="https://github.com/graphicore/Atem-Project/issues">issue tracker</a></li>
 <li>Ask <a href="https://twitter.com/AtemProject">@AtemProject</a> on Twitter</li>
 <li>Post a qestion in <a href="https://plus.google.com/u/0/communities/110027004108709154749">Metapolator on G+</a></li>
+<li>If <a href="https://github.com/graphicore/Atem-Project/issues">no</a> <a href="https://github.com/graphicore/Atem-Project/issues">other</a> <a href="https://github.com/graphicore/Atem-Project/issues">channel</a> is sufficient, contact <a href="http://graphicore.de/en/page/lasse">Lasse</a> directly.</li>
+</ul>
+
+<h4>More Channels</h4>
+
+<ul>
 <li>Should we use <a href="irc://irc.freenode.net/atem">freenode #atem</a>?</li>
 <li>We could maybe use a <a href="https://disqus.com/">https://disqus.com/</a> forum on this page, but I&#39;d prefer a solution with less lock-in of our data. Hosted by someone else is fine though.</li>
 </ul>
 
 <h2>todo: Make a FAQ</h2>
 
-<p>This should help people to contact us and to participate.
-Where can we collect questions that are frequently ask?</p>
+<p>This should help people to contact us, to participate, to find their way around, to get started with git etc.</p>
+
+<p>We must therefore collect questions that are frequently asked or make questions out of frequent issues.</p>
 </article>
 
   
