--- a/impressum.md.html
+++ b/impressum.md.html
@@ -5,6 +5,9 @@
     <title>impressum.md | Atem | Atem Tooling Expressive Models</title>
     
 
+<link rel="alternate" type="application/atom+xml"
+      title="Atem-Project News Feed" href="news/feed.atom" />
+
 <link rel="stylesheet" type="text/css"
       href="files/main.css" />
 
@@ -45,11 +48,13 @@
         --><li class="">
         <a href="news/index.html">News</a></li><!--
         --><li class="">
-        <a href="vision.md.html">Vision</a></li><!--
+        <a href="content/Vision/index.html">Vision</a></li><!--
         --><li class="">
-        <a href="contribute.md.html">Contribute</a></li><!----></ul></li><!----><!--
+        <a href="support-us.md.html">Support Us</a></li><!--
         --><li class="">
-            <a href="content/Documentation/index.html">Project</a>
+        <a href="collaborate.md.html">Collaborate</a></li><!----></ul></li><!----><!--
+        --><li class="">
+            <a href="content/Sub-Projects/index.html">Project</a>
             </li><!----><!--
         --><li class="">
             <a href="help.md.html">Help</a>
