--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>index.md | Atem | Atem Tooling Expressive Models</title>
     
 
+<link rel="alternate" type="application/atom+xml"
+      title="Atem-Project News Feed" href="news/feed.atom" />
+
 <link rel="stylesheet" type="text/css"
       href="files/main.css" />
 
@@ -45,11 +48,13 @@
         --><li class="">
         <a href="news/index.html">News</a></li><!--
         --><li class="">
-        <a href="vision.md.html">Vision</a></li><!--
+        <a href="content/Vision/index.html">Vision</a></li><!--
         --><li class="">
-        <a href="contribute.md.html">Contribute</a></li><!----></ul></li><!----><!--
+        <a href="support-us.md.html">Support Us</a></li><!--
         --><li class="">
-            <a href="content/Documentation/index.html">Project</a>
+        <a href="collaborate.md.html">Collaborate</a></li><!----></ul></li><!----><!--
+        --><li class="">
+            <a href="content/Sub-Projects/index.html">Project</a>
             </li><!----><!--
         --><li class="">
             <a href="help.md.html">Help</a>
@@ -58,58 +63,48 @@
 </header>
 
   
-<article class="standard"><p><em>UNDER CONSTRUCTION</em> * <em>UNDER CONSTRUCTION</em> * <em>UNDER CONSTRUCTION</em> * <em>UNDER CONSTRUCTION</em></p>
+<article class="standard"><h1>Atem Tooling Expressive Models</h1>
 
-<h1>Atem-Project</h1>
+<p>We explore new data models and make good tooling for this.</p>
 
-<p><strong>A</strong>tem <strong>T</strong>ooling <strong>E</strong>xpressive <strong>M</strong>odels:  We will guide the project (documentation, discussions, community, roadmaps etc.) from here.</p>
+<p>Our aim is making software that empowers the user, that is simple to use
+by default but is unlimited when more might is needed. Software that
+helps the user to grow some more knowledge.</p>
 
-<p>Use the issue-tracker of this Github repository to discuss any questions/topics about Atem.</p>
+<p>The root of Atem is <a href="http://metapolator.com">Metapolator</a> and our focus
+is on making better tools for <strong>type design and typography</strong>. But, Atem is
+not limited to any specific use. As such we build big applications and
+smaller tech-demos that may spark inspiration for other domains as well.</p>
 
-<h2>Contribute?</h2>
+<p>For more details see <a href="content/Vision/index.html">Vision</a>.</p>
 
-<p>A beginning of project management is in <a href="https://github.com/graphicore/Atem-Project/tree/master/tasks.md">tasks.md</a>. If you see yourself fit to work on one of the tasks, please contact us!</p>
+<h2>Community and Free Software</h2>
 
-<h2>The Atem-Project is a collection of sub-projects:</h2>
+<p>Atem is all about making great and Free Software—<strong>“free” as in “free speech,”</strong> not as in “free beer”—we
+collaborate as a community, using git as our main tool.
+The <a href="https://github.com/graphicore/Atem-Project">contents</a> and
+<a href="https://github.com/graphicore/Atem-Webgenerator">code</a> of this website
+are hosted on GitGub. Think of it like a Wiki, but with worklfow for collaboration
+as in Open Source Software.</p>
 
-<p>The separation into Applications, Main Libraries and Basic/Helper Libraries is somewhat arbitrary, don&#39;t derive to much meaning from it.</p>
+<p>Of course all source code of our <a href="content/Sub-Projects/index.html">sub-projects</a>
+is on GitHub, too. If you are interested in joining our community
+see the <a href="collaborate.md.html">Collaboration</a> and
+<a href="support-us.md.html">Support Us</a> pages as an
+inspiration for what you can do.</p>
 
-<h3>Applications</h3>
+<h2>Project Communication</h2>
 
-<ul>
-<li><a href="https://github.com/metapolator/metapolator">Metapolator</a>: Design fonts and font families faster; Metapolator is the origin of Atem (<a href="http://metapolator.com">website</a>).</li>
-<li><a href="https://github.com/metapolator/Atem-MOM-Developer-Tool">Atem-MOM-Developer-Tool</a>: graphical inspection and manipulation of CPS and the Metapolator Object Model.</li>
-<li><a href="https://github.com/graphicore/Bauhaus-Emblem-Font">Bauhaus-Emblem-Font</a>: Technology demo, learning tool, next generation (type-)design Application.</li>
-</ul>
+<p>A big part of this website is dedicated to project management and documentation
+of Atem. As such, the <a href="content/Sub-Projects/index.html">Project</a>,
+<a href="content/Concepts/index.html">Concepts</a>,
+<a href="content/Proposals/index.html">Proposals</a> and
+<a href="content/Manuals/index.html">Manuals</a> sections
+are there to help us organizing our work and to help you learning about this project.</p>
 
-<h3>Main Libraries</h3>
-
-<p>The building blocks for Atem-Applications.</p>
-
-<ul>
-<li><a href="https://github.com/graphicore/ufoJS/">ufoJS</a>: Javascript API for the <strong>U</strong>nified <strong>F</strong>ont <strong>O</strong>bject (<a href="http://lib.ufojs.org">website</a>).</li>
-<li><a href="https://github.com/graphicore/Atem-IO">Atem-IO</a>: simple, unified input/outout API for JavaScript. Includes API adapters and tools.</li>
-<li><a href="https://github.com/graphicore/Atem-Pen-Case">Atem-Pen-Case</a>: JavaScript API-implementation of the Segment-Pen-Protocol and Point-Pen-Protocol plus a collection of pens.</li>
-<li><a href="https://github.com/graphicore/Atem-Property-Language">Atem-Property-Language</a>: Language to define CPS property values; includes the formulae language of Atem-MOM.</li>
-<li><a href="https://github.com/graphicore/Atem-CPS">Atem-CPS</a>: CPS—<strong>C</strong>ascading <strong>P</strong>roperties <strong>S</strong>heets and OMA—<strong>O</strong>bject <strong>M</strong>odel <strong>A</strong>PI</li>
-<li><a href="https://github.com/graphicore/Atem-MOM">Atem-MOM</a>: MOM—<strong>M</strong>etapolator <strong>O</strong>bject <strong>M</strong>odel</li>
-<li><a href="https://github.com/graphicore/obtainJS">obtainJS</a>: Framework to unify synchronous and asynchronous JavaScript.</li>
-<li><a href="https://github.com/graphicore/Atem-CPS-Developer-Tool">Atem-CPS-Developer-Tool</a>: graphical user interface tools for CPS and the OMA on a generic level. (currently uses just as library not as application)</li>
-<li><a href="https://github.com/graphicore/Atem-CPS-Toolkit">Atem-CPS-Toolkit</a>: shared tools used to render the CPS/OMA in user interfaces.</li>
-<li><a href="https://github.com/graphicore/Atem-MOM-Toolkit">Atem-MOM-Toolkit</a>: shared tools used to render the Metapolator Object Model in user interfaces.</li>
-</ul>
-
-<h3>Basic/Helper Libraries</h3>
-
-<p>These are libraries that are used throughout many of the Atem projects more infrastructure than innovation.</p>
-
-<ul>
-<li><a href="https://github.com/graphicore/Atem-Errors">Atem-Errors</a>: Library commonly used by Atem-Project for Error-Class creation.</li>
-<li><a href="https://github.com/graphicore/Atem-CPS-whitelisting">Atem-CPS-whitelisting</a>: Atem Project: lightweight dependency to prepare objects for usage within Atem-CPS; whitelisting accessible properties.</li>
-<li><a href="https://github.com/graphicore/Atem-Math-Tools">Atem-Math-Tools</a>: Collection of (2d graphics) math modules used in Atem.</li>
-<li><a href="https://github.com/graphicore/Atem-RequireJS-Config/">Atem-RequireJS-Config</a>: common RequireJS configuration for all Atem sub-projects.</li>
-<li><a href="https://github.com/graphicore/%20Atem-Logging">Atem-Logging</a>: Versatile logging facility based on util-logging adding some specifics for Atem.</li>
-</ul>
+<p>We strive to be <strong>open and transparent</strong>, most of our discussions are held
+publicly on the <a href="https://github.com/graphicore/Atem-Project/issues">Issue Tracker of Atem-Project</a>
+or if appropriate on the issue tracker of a sub-project.</p>
 </article>
 
   
