Changed some wording

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ helps the user to grow some more knowledge.</p>
 
 <p>The root of Atem is <a href="http://metapolator.com">Metapolator</a> and our focus
 is on making better tools for <strong>type design and typography</strong>. But, Atem is
-not limited to any specific use. As such we build big applications and
-smaller tech-demos that may spark inspiration for other domains as well.</p>
+not limited to any specific use. We build big applications and
+smaller tech-demos to spark inspiration for <strong>other domains.</strong></p>
 
 <p>For more details see <a href="content/Vision/index.html">Vision</a>.</p>
 
@@ -84,7 +84,7 @@ smaller tech-demos that may spark inspiration for other domains as well.</p>
 collaborate as a community, using git as our main tool.
 The <a href="https://github.com/graphicore/Atem-Project">contents</a> and
 <a href="https://github.com/graphicore/Atem-Webgenerator">code</a> of this website
-are hosted on GitGub. Think of it like a Wiki, but with worklfow for collaboration
+are hosted on GitGub. Think of it like a Wiki, but with a worklfow
 as in Open Source Software.</p>
 
 <p>Of course all source code of our <a href="content/Sub-Projects/index.html">sub-projects</a>
@@ -96,7 +96,7 @@ inspiration for what you can do.</p>
 <h2>Project Communication</h2>
 
 <p>A big part of this website is dedicated to project management and documentation
-of Atem. As such, the <a href="content/Sub-Projects/index.html">Project</a>,
+of Atem. The <a href="content/Sub-Projects/index.html">Project</a>,
 <a href="content/Concepts/index.html">Concepts</a>,
 <a href="content/Proposals/index.html">Proposals</a> and
 <a href="content/Manuals/index.html">Manuals</a> sections
