--- a/support-us.md.html
+++ b/support-us.md.html
@@ -74,7 +74,7 @@ Thus, “free software” is <em>a matter of liberty, not price</em>. To underst
 We sometimes call it “libre software” to show we do not mean it is gratis.</p>
 </blockquote>
 
-<p>As such, however, funding our work is not as straight forward as selling proprietary licenses.</p>
+<p>Therefore, funding our work is not as straight forward as selling proprietary licenses.</p>
 
 <p>If you like <a href="content/Vision/index.html">what</a> we <a href="content/Sub-Projects/index.html">do</a>,
 and want us to <strong>keep doing it</strong> or if you use our software in a professional workflow then
